style: styling the PostCard and Home

--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-image: url("/background-image.png");
+  background-repeat: repeat;
+}
+
 .cursor-block {
   width: 10px;
   height: 1.5em;
