--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-size: "100px 100px";
+.bg-grid {
+  background-size: 100px 100px;
   background-image: url("/bg-grid.png");
-  background-color: #030712;
-  background-position-y: "-9px";
+  background-position-y: -9px;
 }
 
 .cursor-block {
