--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -4,6 +4,10 @@
 
 /* TODO: min-height 100vh - footer */
 
+.min-height {
+  min-height: calc(100vh - (72px + 72px)); 
+}
+
 .bg-grid {
   background-size: 100px 100px;
   background-image: url("/bg-grid.png");
